# xenclap_plugins

./: CMakeLists.txt
python/clapgen/: generate_clap.py  gritnoise.cpp  gui.html  template.cpp
source/: common.h  fileplayer.cpp  main.cpp  noiseplethora2.html  noiseplethoraengine.h  noiseplethorasynth.cpp
source/fileplayer/: fileplayer.cpp
source/klangas/: klangassynth.cpp  sineosc.cpp  sineosc.h
source/noiseplethora/: noiseplethoraengine.h  noiseplethorasynth.cpp
